Translate sentence as a whole, moving first phrase to the end in French
I restored the emphasis lost in the move by introducing the phrase with
with the demonstrative pronoun 'voici'.

--- a/book-fr/index.html
+++ b/book-fr/index.html
@@ -119,16 +119,12 @@
         Les histoires de Frank devinrent mes histoires, nos histoires.
         <!--
         This book is, partly,
-        -->
-        Le propos de ce livre est, en partie,
-        <!--
         about making things out of stories,
-        -->
-        comment créer des choses à partir d'histoires,
-        <!--
         and using them to help us live well.
         -->
-        et comment les utiliser pour nous aider à vivre mieux.
+        Créer des choses à partir d'histoires,
+        et les utiliser pour nous aider à vivre mieux,
+        voici en partie le propos de ce livre.
       </p>
       <p>
         <!--
