Add comma and repeat preposition "dans" to clarify meaning
The meaning was getting lost after in the stretch of the sentence
after "systèmes".

--- a/book-fr/index.html
+++ b/book-fr/index.html
@@ -210,11 +210,11 @@
         <!--
         between the adjacent systems
         -->
-        à l'interface entre les systèmes
+        à l'interface entre les systèmes,
         <!--
         in the world and our own design process.
         -->
-        dans le monde et nos propres processus de création.
+        dans le monde et dans nos propres processus de création.
         <!--
         Jazz. Tools. Art. Pizza.
         -->
