Start to rework long sentence
I changed my interpretation of this sentence, realizing that "Done well,"
at the very beginning is completed with "Our process will vary" at the
start of the next sentence.

I will join these two sentences by a comma in the French translation,
and move the block for "Done well" closer to avoid this long stretch
where the meaning gets lost.

--- a/book-fr/index.html
+++ b/book-fr/index.html
@@ -242,7 +242,7 @@
         <!--
         Done well, and one gets there “the long, hard, stupid way,”
         -->
-        Un travail bien fait, et il faut pour y parvenir emprunter
+        Pour bien faire, et il faut pour y parvenir emprunter
         «&nbsp;durement et bêtement le chemin le plus long&nbsp;»,
         <!--
         as Frank frames it in the pages to come,
@@ -259,15 +259,16 @@
         <!--
         to make things with pride and compassion.
         -->
-        à faire les choses avec fierté et compassion.
+        à faire les choses avec fierté et compassion,
         <!--
         Our process will vary,
+        -->
+        les méthodes diffèrent,
+        <!--
         but steeling ourselves to persist is
         what Frank gives us the tools to do.
         -->
-        Frank nous donne les outils pour construire
-        notre armure de protection et persister
-        alors que nos processus fluctuent.
+        mais Frank nous donne les outils pour nous armer de courage.
       </p>
       <p>
         <!--
