Replace "remue" with "émeut"
This keeps the idea of moving and feeling, while being more natural.

--- a/book-fr/introduction.html
+++ b/book-fr/introduction.html
@@ -47,7 +47,7 @@
         <!--
         It moves.
         -->
-        Elle remue.
+        Elle émeut.
         <!--
         The story of a successful piece of design
         -->
