Replace "ballade" (poem in music) with "balade" (stroll)
The two terms are probably related and often confused.

--- a/book-fr/introduction.html
+++ b/book-fr/introduction.html
@@ -67,7 +67,7 @@
         <!--
         moving the work out and around.
         -->
-        qui fait sortir l'œuvre en ballade.
+        qui fait sortir l'œuvre en balade.
         <!--
         It then continues in the feeling
         -->
