Make translation more natural: "effort requis pour"

--- a/book-fr/index.html
+++ b/book-fr/index.html
@@ -255,11 +255,11 @@
         <!--
         and the extra effort that compels us
         -->
-        et l'effort supplémentaire qui nous pousse
+        et l'effort supplémentaire requis
         <!--
         to make things with pride and compassion.
         -->
-        à faire les choses avec fierté et compassion,
+        pour faire les choses avec fierté et compassion,
         <!--
         Our process will vary,
         -->
