Break long lines in source of the translation
The output is unchanged.

EDIT: after making this change, the logic of the argument appears more
clearly, and is reflected in the current translation. There may be no
need to move the start of the sentence closer to its continuation.

--- a/book-fr/index.html
+++ b/book-fr/index.html
@@ -240,9 +240,16 @@
         -->
         Déchiffrer et concevoir ces systèmes est un travail difficile.
         <!--
-        Done well, and one gets there “the long, hard, stupid way,”
+        Done well,
         -->
-        Pour bien faire, et il faut pour y parvenir emprunter
+        Pour bien faire,
+        <!--
+        and one gets there
+        -->
+        et il faut pour y parvenir emprunter
+        <!--
+        “the long, hard, stupid way,”
+        -->
         «&nbsp;durement et bêtement le chemin le plus long&nbsp;»,
         <!--
         as Frank frames it in the pages to come,
