--- a/book-fr/index.html
+++ b/book-fr/index.html
@@ -210,7 +210,7 @@
         <!--
         between the adjacent systems
         -->
-        à l'interface entre les systèmes,
+        qui délimite l'interface entre les systèmes,
         <!--
         in the world and our own design process.
         -->
