Add "adjacents" back
The word had disappeared, included in the idea conveyed by "interface",
but is now a welcome addition following the more verbose clarification
done just before.

--- a/book-fr/index.html
+++ b/book-fr/index.html
@@ -210,7 +210,7 @@
         <!--
         between the adjacent systems
         -->
-        qui délimite l'interface entre les systèmes,
+        qui délimite l'interface entre les systèmes adjacents,
         <!--
         in the world and our own design process.
         -->
