Apply adjective "omniprésent" to both "outil" and "plateforme"

--- a/book-fr/index.html
+++ b/book-fr/index.html
@@ -285,7 +285,7 @@
         <!--
         a more ubiquitous tool and platform,
         -->
-        un outil omniprésent et une plateforme,
+        un outil et une plateforme omniprésents,
         <!--
         the U.S. Interstate Highway System.
         -->
