--- a/book-fr/acknowledgements.html
+++ b/book-fr/acknowledgements.html
@@ -43,126 +43,183 @@
         <!--
         I began thinking seriously about this book
         -->
+        J'ai commencé à penser sérieusement à ce livre
         <!--
         in November of <span class="osf">2010</span>,
         -->
+        en novembre <span class="osf">2010</span>,
         <!--
         shortly after completing a lecture of the same name
         -->
+        peu après avoir terminé une présentation du même nom
         <!--
         at the Build conference in Belfast, Northern Ireland.
         -->
+        à la conférence Build de Belfast, en Irlande du Nord.
         <!--
         The talk was warmly received,
         -->
+        Mon discours reçut un accueil chaleureux,
         <!--
-        but I perceived there was more to the ideas I presented.
+        but I perceived
         -->
+        mais j'ai pris conscience
+        <!--
+        there was more to the ideas I presented.
+        -->
+        de la vraie portée des idées que j'avais présentées.
         <!--
         They required further investigation and thought.
         -->
+        Elles réclamaient une investigation et une réflexion plus approfondies.
         <!--
-        It took four months to muster up the courage to begin writing,
+        It took four months to muster up the courage
         -->
+        Cela m'a pris quatre mois de réunir le courage nécessaire
+        <!--
+        to begin writing,
+        -->
+        pour commencer à écrire,
         <!--
         but a year and a half later,
         -->
+        mais un an et demi plus tard,
         <!--
         I feel as if my search is concluding.
         -->
+        j'ai le sentiment que ma recherche aboutit à sa fin.
       </p>
 
       <p>
         <!--
-        A sincere thank you goes to those who joined me in the search party.
+        A sincere thank you goes to
         -->
+        Je remercie sincèrement
         <!--
-        David Cole, Liz Danzico, Rob Giampietro, Craig Mod, Jason Santa Maria,
+        those who joined me in the search party.
         -->
+        tous ceux qui m'ont accompagné dans cette expédition.
         <!--
-        and Andy McMillan all read early versions of the manuscript
+        David Cole, Liz Danzico, Rob Giampietro, Craig Mod,
         -->
+        David Cole, Liz Danzico, Rob Giampietro, Craig Mod,
         <!--
+        Jason Santa Maria, and Andy McMillan
+        -->
+        Jason Santa Maria et Andy McMillan
+        <!--
+        all read early versions of the manuscript
         and offered instrumental feedback.
         -->
+        m'ont tous offert des retours constructifs
+        à la lecture des premières versions du manuscrit.
         <!--
         The book is better from their ideas, support, and friendship.
         -->
+        Le livre a bénéficié de leurs idées, de leur soutien et de leur amitié.
       </p>
 
       <p>
         <!--
         I especially owe a debt to Mandy Brown,
         -->
+        Je suis particulièrement redevable à Mandy Brown,
         <!--
         whose steady eye and deft pen
         -->
+        dont l'œil sûr et la plume habile
         <!--
         guided my thoughts throughout the writing process.
         -->
+        ont guidé mes pensées tout au long du processus d'écriture.
         <!--
         If there is clarity to these words,
         -->
+        Si ces mots sont devenus clairs,
         <!--
         Mandy’s editing is to credit.
         -->
+        c'est grâce au travail d'édition de Mandy.
       </p>
 
       <p>
         <!--
         My deepest gratitude and love go to my family and friends,
         -->
+        Je remercie du fond du cœur ma famille et mes amis,
         <!--
         who have all allowed me the space
         -->
+        qui tous m'ont laissé de l'espace
         <!--
         to shake off the everydayness of my own life
         -->
+        pour me détacher de ma vie de tous les jours
         <!--
         to write this book.
         -->
+        pour écrire ce livre.
         <!--
         I really don’t know how you put up with all of this,
         -->
+        Je ne sais vraiment pas comment vous avez pu supporter tout ça,
         <!--
-        but each day, I’m ever more grateful that you do.
+        but each day,
         -->
+        mais de jour en jour,
+        <!--
+        I’m ever more grateful that you do.
+        -->
+        je suis de plus en plus reconnaissant que vous l'ayez fait.
         <!--
         Thanks to Kate Bingaman-Burt, Josh Brewer, Max Fenton, Jessica Hische,
         -->
+        Merci à Kate Bingaman-Burt, Josh Brewer, Max Fenton, Jessica Hische,
         <!--
         Cameron Koczon, Tyler and Elsa Lang, Neven Mrgan, Josh Stewart,
         -->
+        Cameron Koczon, Tyler et Elsa Lang, Neven Mrgan, Josh Stewart,
         <!--
         Allen Tan, Trent Walton, Ian Whitmore, Doug Wilson, and anyone else
         -->
+        Allen Tan, Trent Walton, Ian Whitmore, Doug Wilson et tous ceux
         <!--
-        who has had to grin and bear me talking about the book yet again.
+        who has had to grin and bear me
         -->
+        qui ont dû supporter avec le sourire de m'écouter
+        <!--
+        talking about the book yet again.
+        -->
+        parler du livre encore et encore.
         <!--
         I will return the favor soon.
         -->
+        Je vous revaudrai ça bientôt.
       </p>
 
       <p>
         <!--
         Special thank yous, apologies, and love letters
-        -->
-        <!--
         are reserved for Mom, Dad, and Laura.
         -->
+        Je réserve des remerciements particuliers, des excuses
+        et des lettres d'amour pour Maman, Papa et Laura.
         <!--
         They have been anchors and kept me from floating away,
         -->
+        Ils ont été les ancres qui m'ont empêché de dériver,
         <!--
         even during the hardest year of <em>their</em> lives.
         -->
+        même pendant l'année la plus dure de <em>leurs</em> vies.
         <!--
         Their poise is staggering and inspiring.
         -->
+        Leur sang-froid est impressionnant et source d'inspiration.
         <!--
         I’m so glad to call them mine.
         -->
+        Je suis si heureux qu'ils soient les miens.
       </p>
     </article>
 
