Remove two commas, redundant in French

--- a/book-fr/acknowledgements.html
+++ b/book-fr/acknowledgements.html
@@ -55,11 +55,11 @@
         <!--
         at the Build conference in Belfast, Northern Ireland.
         -->
-        à la conférence Build de Belfast, en Irlande du Nord.
+        à la conférence Build de Belfast en Irlande du Nord.
         <!--
         The talk was warmly received,
         -->
-        Mon discours reçut un accueil chaleureux,
+        Mon discours reçut un accueil chaleureux
         <!--
         but I perceived
         -->
