--- a/book-en/endnotes.html
+++ b/book-en/endnotes.html
@@ -58,7 +58,7 @@
 
       <p><a id="chapter02-note01" class="endnote-anchor" href="chapter02.html#chapter02-note01"><em>“A sunflower seed…”</em></a>: Flanders, John. <em>The Craftsman’s Way</em>: Canadian Expressions. Toronto: University of Toronto, <span class="osf">1981</span>.</p>
 
-      <p><a id="chapter02-note02" class="endnote-anchor" href="chapter02.html#chapter02-note02"><em>“pheromones of the master’s own breath.”</em></a>: Watson, Lyall. <em>The Nature of Things: The Secret Life of Inanimate Objects.</em> London: Hodder &amp; Stoughton, <span class="osf">1990</span>.</p>
+      <p><a id="chapter02-note02" class="endnote-anchor" href="chapter02.html#chapter02-note02"><em>“…pheromones of the master’s own breath.”</em></a>: Watson, Lyall. <em>The Nature of Things: The Secret Life of Inanimate Objects.</em> London: Hodder &amp; Stoughton, <span class="osf">1990</span>.</p>
 
       <h2 id="heading_id_6">Chapter Three</h2>
 
@@ -76,11 +76,11 @@
 
       <h2 id="heading_id_8">Chapter Five</h2>
 
-      <p><a id="chapter05-note01" class="endnote-anchor" href="chapter05.html#chapter05-note01"><em>“the world as it will be…”</em></a>: Asimov, Isaac. <em>Asimov on Science Fiction.</em> Garden City, NY: Doubleday, <span class="osf">1981</span>.</p>
+      <p><a id="chapter05-note01" class="endnote-anchor" href="chapter05.html#chapter05-note01"><em>“…the world as it will be…”</em></a>: Asimov, Isaac. <em>Asimov on Science Fiction.</em> Garden City, NY: Doubleday, <span class="osf">1981</span>.</p>
 
       <h2 id="heading_id_9">Chapter Six</h2>
 
-      <p><a id="chapter06-note01" class="endnote-anchor" href="chapter06.html#chapter06-note01"><em>“We sail within a vast sphere ”</em></a>: Pascal, Blaise. <a href="http://www.gutenberg.org/files/18269/18269-h/18269-h.htm#p_72"><span><em>Pascal's Pensées.</em></span></a> Project Gutenberg. <span class="osf">27</span> Apr. <span class="osf">2006</span>. Web. <span class="osf">8</span> Apr. <span class="osf">2012</span>. </p>
+      <p><a id="chapter06-note01" class="endnote-anchor" href="chapter06.html#chapter06-note01"><em>“We sail within a vast sphere…”</em></a>: Pascal, Blaise. <a href="http://www.gutenberg.org/files/18269/18269-h/18269-h.htm#p_72"><span><em>Pascal's Pensées.</em></span></a> Project Gutenberg. <span class="osf">27</span> Apr. <span class="osf">2006</span>. Web. <span class="osf">8</span> Apr. <span class="osf">2012</span>. </p>
 
       <p><a id="chapter06-note02" class="endnote-anchor" href="chapter06.html#chapter06-note02"><em>“…the right solution would presently announce itself.”</em></a>: Weschler, Lawrence, and Robert Irwin. <em>Seeing Is Forgetting the Name of the Thing One Sees: A Life of Contemporary Artist Robert Irwin.</em> Berkeley: University of California, <span class="osf">1982</span>.</p>
 
