Remove extra id attributes on headings, not used for styling

--- a/book-en/endnotes.html
+++ b/book-en/endnotes.html
@@ -38,13 +38,13 @@
 
 
     <article class="endnotes">
-      <h1 id="heading_id_2">Endnotes</h1>
+      <h1>Endnotes</h1>
 
-      <h2 id="heading_id_3">Introduction</h2>
+      <h2>Introduction</h2>
 
       <p><a id="introduction-note01" class="endnote-anchor" href="introduction.html#introduction-note01"><em>“march backwards into the future”</em></a>: McLuhan, Marshall, Quentin Fiore. <em>The Medium Is the Massage.</em> New York, London, Toronto: Random House, <span class="osf">1967</span>.</p>
 
-      <h2 id="heading_id_4">Chapter One</h2>
+      <h2>Chapter One</h2>
 
       <p><a id="chapter01-note01" class="endnote-anchor" href="chapter01.html#chapter01-note01"><em>“…a more beautiful question”</em></a>: Cummings, E.E. <em>Collected Poems [of] E. E. Cummings.</em> Harcourt, Brace and Company, <span class="osf">1928</span>.</p>
 
@@ -54,19 +54,19 @@
 
       <p><a id="chapter01-note04" class="endnote-anchor" href="chapter01.html#chapter01-note04"><em>“aired its final episode of Reading Rainbow”</em></a>: Calhoun, Ben. <a href="http://www.npr.org/templates/story/story.php?storyId=112312561"><span>“Reading Rainbow Reaches Its Final Chapter.”</span></a> <span class="osf"><em>NPR.</em> NPR, 28</span> Aug. <span class="osf">2009</span>. Web. <span class="osf">02</span> Apr. <span class="osf">2012</span>.</p>
 
-      <h2 id="heading_id_5">Chapter Two</h2>
+      <h2>Chapter Two</h2>
 
       <p><a id="chapter02-note01" class="endnote-anchor" href="chapter02.html#chapter02-note01"><em>“A sunflower seed…”</em></a>: Flanders, John. <em>The Craftsman’s Way</em>: Canadian Expressions. Toronto: University of Toronto, <span class="osf">1981</span>.</p>
 
       <p><a id="chapter02-note02" class="endnote-anchor" href="chapter02.html#chapter02-note02"><em>“…pheromones of the master’s own breath.”</em></a>: Watson, Lyall. <em>The Nature of Things: The Secret Life of Inanimate Objects.</em> London: Hodder &amp; Stoughton, <span class="osf">1990</span>.</p>
 
-      <h2 id="heading_id_6">Chapter Three</h2>
+      <h2>Chapter Three</h2>
 
       <p><a id="chapter03-note01" class="endnote-anchor" href="chapter03.html#chapter03-note01"><em>“I'll play first…”</em></a>: <a href="http://www.youtube.com/watch?v=R1CwXz8Xidc"><span><em>Miles Davis Honda Scooter Ad.</em></span></a> Perf. Miles Davis. Commercial. YouTube. <span class="osf">1</span> Feb. <span class="osf">2008</span>. Web. <span class="osf">8</span> Apr. <span class="osf">2012</span>.</p>
 
       <p><a id="chapter03-note02" class="endnote-anchor" href="chapter03.html#chapter03-note02"><em>“Lighting one candle…”</em></a>: Hass, Robert, Basho Matsuo, Buson Yosa, and Issa Kobayashi. <em>The Essential Haiku: Versions of Basho, Buson, and Issa.</em> Hopewell, nj: Ecco, <span class="osf">1994</span>.</p>
 
-      <h2 id="heading_id_7">Chapter Four</h2>
+      <h2>Chapter Four</h2>
 
       <p><a id="chapter04-note01" class="endnote-anchor" href="chapter04.html#chapter04-note01"><em>“…putting form and content together.”</em></a>: Blumenthal, Saul. <a href="http://tech.mit.edu/V116/N59/paulrand.59n.html"><span>“Designer Paul Rand Speaks at Media Lab.”</span></a> <em>The Tech.</em> Massachusetts Institute of Technology, <span class="osf">15</span> Nov. <span class="osf">1996</span>. Web. <span class="osf">02</span> Apr. <span class="osf">2012</span>.</p>
 
@@ -74,29 +74,29 @@
 
       <p>Johnson, Steven. <a id="chapter04-note03" class="endnote-anchor" href="chapter04.html#chapter04-note03"><em>Where Good Ideas Come From: The Natural History of Innovation.</em></a> New York: Riverhead, <span class="osf">2010</span>.</p>
 
-      <h2 id="heading_id_8">Chapter Five</h2>
+      <h2>Chapter Five</h2>
 
       <p><a id="chapter05-note01" class="endnote-anchor" href="chapter05.html#chapter05-note01"><em>“…the world as it will be…”</em></a>: Asimov, Isaac. <em>Asimov on Science Fiction.</em> Garden City, NY: Doubleday, <span class="osf">1981</span>.</p>
 
-      <h2 id="heading_id_9">Chapter Six</h2>
+      <h2>Chapter Six</h2>
 
       <p><a id="chapter06-note01" class="endnote-anchor" href="chapter06.html#chapter06-note01"><em>“We sail within a vast sphere…”</em></a>: Pascal, Blaise. <a href="http://www.gutenberg.org/files/18269/18269-h/18269-h.htm#p_72"><span><em>Pascal's Pensées.</em></span></a> Project Gutenberg. <span class="osf">27</span> Apr. <span class="osf">2006</span>. Web. <span class="osf">8</span> Apr. <span class="osf">2012</span>. </p>
 
       <p><a id="chapter06-note02" class="endnote-anchor" href="chapter06.html#chapter06-note02"><em>“…the right solution would presently announce itself.”</em></a>: Weschler, Lawrence, and Robert Irwin. <em>Seeing Is Forgetting the Name of the Thing One Sees: A Life of Contemporary Artist Robert Irwin.</em> Berkeley: University of California, <span class="osf">1982</span>.</p>
 
-      <h2 id="heading_id_10">Chapter Seven</h2>
+      <h2>Chapter Seven</h2>
 
       <p><a id="chapter07-note01" class="endnote-anchor" href="chapter07.html#chapter07-note01"><em>“Draw your chair up close…”</em></a>: Fitzgerald, F. Scott, and Edmund Wilson. <em>The Crack-Up.</em> New York: J. Laughlin, <span class="osf">1945</span>.</p>
 
-      <h2 id="heading_id_11">Chapter Eight</h2>
+      <h2>Chapter Eight</h2>
 
       <p><a id="chapter08-note01" class="endnote-anchor" href="chapter08.html#chapter08-note01"><em>“…you will contribute a verse.”</em></a>: From the poem <em>O Me! O Life!</em> Whitman, Walt. <em>Leaves of Grass.</em> New York, NY: HarperCollins, <span class="osf">2000</span>.</p>
 
-      <h2 id="heading_id_12">Chapter Nine</h2>
+      <h2>Chapter Nine</h2>
 
       <p><a id="chapter09-note01" class="endnote-anchor" href="chapter09.html#chapter09-note01"><em>“Who ever said that pleasure…”</em></a>: <a href="http://www.youtube.com/watch?v=3xYi2rd1QCg"><span><em>Design Q&amp;A with Charles Eames.</em></span></a> Perf. Charles Eames. YouTube. Web.</p>
 
-      <h2 id="heading_id_13">Chapter Ten</h2>
+      <h2>Chapter Ten</h2>
 
       <p><a id="chapter10-note01" class="endnote-anchor" href="chapter10.html#chapter10-note01"><em>“Not I, not I…”</em></a>: From the poem <em>Song of a Man Who Has Come Through.</em> Lawrence, D. H. <em>The Complete Poems.</em> New York: Penguin, <span class="osf">1971</span>.</p>
 
