Wrap title of Foreword in span, not author
The styles applied to the title were applied to the author's name
instead: black and red colors were inverted.

--- a/book-en/index.html
+++ b/book-en/index.html
@@ -43,8 +43,8 @@
     </nav>
 
     <article>
-      <h1><span>Foreword</span><br>
-      Liz Danzico</h1>
+      <h1>Foreword<br>
+      <span>Liz Danzico</span></h1>
       <p class="first">Frank Chimero and I came together over a shared commitment to jazz. But not only exchanges of music. We emulated the form. He would write a blog post. I would respond. I would improvise one of his hunches. He would iterate one of my posts. A call-and-response approach to a developing friendship.</p>
       <p>We wrote like this alongside one another without ever meeting or speaking directly &ndash; much like many of us: we never meet the people we admire from afar. We read their stories. We watch their videos. We inspect their work. We make up the in-between parts. We improvise. Frank’s stories became my stories, our stories. This book is, partly, about making things out of stories, and using them to help us live well.</p>
       <p>Without warning one day, a mail from Frank appeared in my inbox, introducing himself:</p>
