Move index.html to foreword.html
I will then add the cover in index.html, and two more pages: credits.html
and contents.html.

--- a/book-en/foreword.html
+++ b/book-en/foreword.html
@@ -21,7 +21,7 @@
 
     <nav>
       <ol>
-        <li><a href="index.html" class="active">•<span class="tooltip">Foreword</span></a></li>
+        <li><a href="foreword.html" class="active">•<span class="tooltip">Foreword</span></a></li>
         <li class="sep"><a href="introduction.html">◦<span class="tooltip">Introduction</span></a></li>
 
         <li><a href="chapter01.html">◦<span class="tooltip">1&nbsp;&middot;&nbsp;How&nbsp;and&nbsp;Why</span></a></li>
