--- a/book-en/introduction.html
+++ b/book-en/introduction.html
@@ -19,7 +19,7 @@
         class="download">Download eBook</a>
     </header>
 
-    <nav>
+    <nav class="contents">
       <ol>
         <li><a href="foreword.html">◦<span class="tooltip">Foreword</span></a></li>
         <li class="sep"><a href="introduction.html" class="active">•<span class="tooltip">Introduction</span></a></li>
