--- a/book-en/acknowledgements.html
+++ b/book-en/acknowledgements.html
@@ -21,43 +21,162 @@
 
     <nav class="contents">
       <ol>
-        <li><a href="foreword.html">◦<span class="tooltip">Foreword</span></a></li>
-        <li class="sep"><a href="introduction.html">◦<span class="tooltip">Introduction</span></a></li>
+        <li>
+          <a href="foreword.html"
+            >◦<span class="tooltip"
+            >Foreword</span
+          ></a>
+        </li>
+        <li class="sep">
+          <a href="introduction.html"
+            >◦<span class="tooltip"
+            >Introduction</span
+          ></a>
+        </li>
 
-        <li><a href="chapter01.html">◦<span class="tooltip">1&nbsp;&middot;&nbsp;How&nbsp;and&nbsp;Why</span></a></li>
-        <li><a href="chapter02.html">◦<span class="tooltip">2&nbsp;&middot;&nbsp;Craft&nbsp;and&nbsp;Beauty</span></a></li>
-        <li><a href="chapter03.html">◦<span class="tooltip">3&nbsp;&middot;&nbsp;Limitations&nbsp;and&nbsp;Improvisation</span></a></li>
-        <li class="sep"><a href="chapter04.html">◦<span class="tooltip">4&nbsp;&middot;&nbsp;Form&nbsp;and&nbsp;Magic</span></a></li>
+        <li>
+          <a href="chapter01.html"
+            >◦<span class="tooltip"
+            >1&nbsp;&middot;&nbsp;How&nbsp;and&nbsp;Why</span
+          ></a>
+        </li>
+        <li>
+          <a href="chapter02.html"
+            >◦<span class="tooltip"
+            >2&nbsp;&middot;&nbsp;Craft&nbsp;and&nbsp;Beauty</span
+          ></a>
+        </li>
+        <li>
+          <a href="chapter03.html"
+            >◦<span class="tooltip"
+            >3&nbsp;&middot;&nbsp;Limitations&nbsp;and&nbsp;Improvisation</span
+          ></a>
+        </li>
+        <li class="sep">
+          <a href="chapter04.html"
+            >◦<span class="tooltip"
+            >4&nbsp;&middot;&nbsp;Form&nbsp;and&nbsp;Magic</span
+          ></a>
+        </li>
 
-        <li><a href="chapter05.html">◦<span class="tooltip">5&nbsp;&middot;&nbsp;Fiction&nbsp;and&nbsp;Bridges</span></a></li>
-        <li class="sep"><a href="chapter06.html">◦<span class="tooltip">6&nbsp;&middot;&nbsp;Context&nbsp;and&nbsp;Response</span></a></li>
+        <li>
+          <a href="chapter05.html"
+            >◦<span class="tooltip"
+            >5&nbsp;&middot;&nbsp;Fiction&nbsp;and&nbsp;Bridges</span
+          ></a>
+        </li>
+        <li class="sep">
+          <a href="chapter06.html"
+            >◦<span class="tooltip"
+            >6&nbsp;&middot;&nbsp;Context&nbsp;and&nbsp;Response</span
+          ></a>
+        </li>
 
-        <li><a href="chapter07.html">◦<span class="tooltip">7&nbsp;&middot;&nbsp;Stories&nbsp;and&nbsp;Voids</span></a></li>
-        <li><a href="chapter08.html">◦<span class="tooltip">8&nbsp;&middot;&nbsp;Frameworks&nbsp;and&nbsp;Etiquette</span></a></li>
-        <li><a href="chapter09.html">◦<span class="tooltip">9&nbsp;&middot;&nbsp;Delight&nbsp;and&nbsp;Accommodation</span></a></li>
-        <li class="sep"><a href="chapter10.html">◦<span class="tooltip">10&nbsp;&middot;&nbsp;Gifts&nbsp;and&nbsp;Giving</span></a></li>
+        <li>
+          <a href="chapter07.html"
+            >◦<span class="tooltip"
+            >7&nbsp;&middot;&nbsp;Stories&nbsp;and&nbsp;Voids</span
+          ></a>
+        </li>
+        <li>
+          <a href="chapter08.html"
+            >◦<span class="tooltip"
+            >8&nbsp;&middot;&nbsp;Frameworks&nbsp;and&nbsp;Etiquette</span
+          ></a>
+        </li>
+        <li>
+          <a href="chapter09.html"
+            >◦<span class="tooltip"
+            >9&nbsp;&middot;&nbsp;Delight&nbsp;and&nbsp;Accommodation</span
+          ></a>
+        </li>
+        <li class="sep">
+          <a href="chapter10.html"
+            >◦<span class="tooltip"
+            >10&nbsp;&middot;&nbsp;Gifts&nbsp;and&nbsp;Giving</span
+          ></a>
+        </li>
 
-        <li><a href="endnotes.html">◦<span class="tooltip">Endnotes</span></a></li>
-        <li><a href="acknowledgements.html" class="active">•<span class="tooltip">Acknowledgements</span></a></li>
+        <li>
+          <a href="endnotes.html"
+            >◦<span class="tooltip"
+            >Endnotes</span
+          ></a>
+        </li>
+        <li>
+          <a href="acknowledgements.html" class="active"
+            >•<span class="tooltip"
+            >Acknowledgements</span
+          ></a>
+        </li>
       </ol>
     </nav>
 
     <article class="ack">
       <h1>Acknowledgements</h1>
-      <p class="first">I began thinking seriously about this book in November of <span class="osf">2010</span>, shortly after completing a lecture of the same name at the Build conference in Belfast, Northern Ireland. The talk was warmly received, but I perceived there was more to the ideas I presented. They required further investigation and thought. It took four months to muster up the courage to begin writing, but a year and a half later, I feel as if my search is concluding.</p>
+      <p class="first">
+        I began thinking seriously about this book
+        in November of <span class="osf">2010</span>,
+        shortly after completing a lecture of the same name
+        at the Build conference in Belfast, Northern Ireland.
+        The talk was warmly received, but I perceived
+        there was more to the ideas I presented.
+        They required further investigation and thought.
+        It took four months to muster up the courage
+        to begin writing, but a year and a half later,
+        I feel as if my search is concluding.
+      </p>
 
-      <p>A sincere thank you goes to those who joined me in the search party. David Cole, Liz Danzico, Rob Giampietro, Craig Mod, Jason Santa Maria, and Andy McMillan all read early versions of the manuscript and offered instrumental feedback. The book is better from their ideas, support, and friendship.</p>
+      <p>
+        A sincere thank you goes to those
+        who joined me in the search party.
+        David Cole, Liz Danzico, Rob Giampietro,
+        Craig Mod, Jason Santa Maria, and Andy McMillan
+        all read early versions of the manuscript
+        and offered instrumental feedback.
+        The book is better from their ideas,
+        support, and friendship.
+      </p>
 
-      <p>I especially owe a debt to Mandy Brown, whose steady eye and deft pen guided my thoughts throughout the writing process. If there is clarity to these words, Mandy’s editing is to credit.</p>
+      <p>
+        I especially owe a debt to Mandy Brown,
+        whose steady eye and deft pen guided my thoughts
+        throughout the writing process.
+        If there is clarity to these words,
+        Mandy’s editing is to credit.
+      </p>
 
-      <p>My deepest gratitude and love go to my family and friends, who have all allowed me the space to shake off the everydayness of my own life to write this book. I really don’t know how you put up with all of this, but each day, I’m ever more grateful that you do. Thanks to Kate Bingaman-Burt, Josh Brewer, Max Fenton, Jessica Hische, Cameron Koczon, Tyler and Elsa Lang, Neven Mrgan, Josh Stewart, Allen Tan, Trent Walton, Ian Whitmore, Doug Wilson, and anyone else who has had to grin and bear me talking about the book yet again. I will return the favor soon.</p>
+      <p>
+        My deepest gratitude and love go to my family and friends,
+        who have all allowed me the space to shake off
+        the everydayness of my own life to write this book.
+        I really don’t know how you put up with all of this,
+        but each day, I’m ever more grateful that you do.
+        Thanks to Kate Bingaman-Burt, Josh Brewer, Max Fenton,
+        Jessica Hische, Cameron Koczon, Tyler and Elsa Lang,
+        Neven Mrgan, Josh Stewart, Allen Tan, Trent Walton,
+        Ian Whitmore, Doug Wilson, and anyone else who has had
+        to grin and bear me talking about the book yet again.
+        I will return the favor soon.
+      </p>
 
-      <p>Special thank yous, apologies, and love letters are reserved for Mom, Dad, and Laura. They have been anchors and kept me from floating away, even during the hardest year of <em>their</em> lives. Their poise is staggering and inspiring. I’m so glad to call them mine.</p>
+      <p>
+        Special thank yous, apologies, and love letters
+        are reserved for Mom, Dad, and Laura.
+        They have been anchors and kept me from floating away,
+        even during the hardest year of <em>their</em> lives.
+        Their poise is staggering and inspiring.
+        I’m so glad to call them mine.
+      </p>
     </article>
 
     <footer>
-      Licensed <a href="http://creativecommons.org/licenses/by-nc-sa/3.0/">BY-NC-SA Creative Commons.</a><br>
-      Thanks to <a href="http://shapeofdesignbook.com/kickstarter/">the Kickstarter backers.</a>
+      Licensed
+      <a href="http://creativecommons.org/licenses/by-nc-sa/3.0/"
+        >BY-NC-SA Creative Commons.</a><br />
+      Thanks to
+      <a href="http://shapeofdesignbook.com/kickstarter/"
+        >the Kickstarter backers.</a>
     </footer>
   </body>
 </html>
