Add alternative translations for start of introduction, in comments

--- a/book-fr/introduction.html
+++ b/book-fr/introduction.html
@@ -44,10 +44,12 @@
         What is the marker of good design?
         -->
         A quoi reconnaît-on une bonne création ?
+        <!-- ALT: Quel est le signe d'une bonne création ? -->
         <!--
         It moves.
         -->
-        Elle émeut.
+        Elle émeut. <!-- bouge, remue (cf Hyde in Chapter 10) -->
+        <!-- ALT: C'est le mouvement. -->
         <!--
         The story of a successful piece of design
         -->
