Wrap "osf" more closely around distinct entities: noun, noun, day of month
A single "osf" span used to wrap these three consecutive entities,
blurring their boundaries in the HTML markup.

--- a/book-en/endnotes.html
+++ b/book-en/endnotes.html
@@ -173,9 +173,9 @@
         <a href="http://www.npr.org/templates/story/story.php?storyId=112312561"
           ><span>“Reading Rainbow Reaches Its Final Chapter.”</span
         ></a>
-        <span class="osf"><em>NPR.</em>
-        NPR,
-        28</span> Aug. <span class="osf">2009</span>.
+        <span class="osf"><em>NPR</em></span>.
+        <span class="osf">NPR</span>,
+        <span class="osf">28</span> Aug. <span class="osf">2009</span>.
         Web.
         <span class="osf">02</span> Apr. <span class="osf">2012</span>.
       </p>
