Fix quote by Charles Eames which introduces Chapter 09
In the video provided as source for the quote, from 1:46 to 1:54,
to the question

Q. Is [Design] able to cooperate in the creation of works
   reserved solely for pleasure?

Charles Eames answered:

A. Who would say that pleasure is not useful?

--- a/book-en/endnotes.html
+++ b/book-en/endnotes.html
@@ -358,11 +358,12 @@
       <p>
         <a id="chapter09-note01" class="endnote-anchor"
           href="chapter09.html#chapter09-note01"
-          ><em>“Who ever said that pleasure…”</em
+          ><em>“Who would say that pleasure is not useful?”</em
         ></a>:
         <a href="http://www.youtube.com/watch?v=3xYi2rd1QCg"
-          ><em>Design Q&amp;A with Charles Eames.</em
+          ><em>Design Q&amp;A with Charles Eames</em
         ></a>
+        (1:46&ndash;1:54).
         Perf.
         Charles Eames.
         YouTube.
