Add opening page with dedication and credits

--- a/book-en/index.html
+++ b/book-en/index.html
@@ -11,7 +11,7 @@
 
   <body>
     <article>
-      <a class="discreet" href="foreword.html">
+      <a class="discreet" href="opening.html">
         <h1>
           The Shape of Design<br/>
           <span>Frank Chimero</span>
