Add a separate page with the Table of Contents

--- a/book-en/opening.html
+++ b/book-en/opening.html
@@ -54,8 +54,8 @@
       <p>
         Thank you.
       </p>
-      <a href="foreword.html" class="continue"
-        >Continue to Foreword</a>
+      <a href="contents.html" class="continue"
+        >Continue to Table of Contents</a>
     </article>
 
     <footer>
