Include full title in "Continue to..." links
This makes the link more enticing and makes the navigation
clearer by giving a direct relationship between this link
and the partial Table of Contents in each Part page, where
one link referred to the chapter by title, the other using
the chapter number.

--- a/book-en/introduction.html
+++ b/book-en/introduction.html
@@ -264,7 +264,7 @@
       </p>
 
       <a href="partI.html" class="continue"
-        >Continue to Part One</a>
+        >Continue to Part One: The Song</a>
     </article>
 
     <footer>
