--- a/book-en/partI.html
+++ b/book-en/partI.html
@@ -135,7 +135,7 @@
       </ol>
 
       <a href="chapter01.html" class="continue"
-        >Continue to Chapter One</a>
+        >Continue to Chapter One: How and Why</a>
     </article>
 
     <footer>
