--- a/book-en/partII.html
+++ b/book-en/partII.html
@@ -129,7 +129,7 @@
       </ol>
 
       <a href="chapter05.html" class="continue"
-        >Continue to Chapter Five</a>
+        >Continue to Chapter Five: Fiction and Bridges</a>
     </article>
 
     <footer>
