Move 'The ' back in title with 'Shape of Design'

--- a/book-en/opening.html
+++ b/book-en/opening.html
@@ -44,7 +44,7 @@
         <li>Brighton, England</li>
       </ul>
       <p>
-        The <em>Shape of Design</em> was born of a spirit of generosity
+        <em>The Shape of Design</em> was born of a spirit of generosity
         in those who backed the book on Kickstarter.
         It should continue that way.
         Share and remix the text,
