Keep markup with English text in comments above French translation

--- a/book-fr/index.html
+++ b/book-fr/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport"
       content="width=device-width, initial-scale=1.0, minimum-scale=1.0"
     />
+    <!--title>The Shape of Design by Frank Chimero</title-->
     <title>La forme en création, de Frank Chimero</title>
     <meta name="description" content="Traduction française de Eric Bréchemier"/>
     <link rel="stylesheet" media="screen, projection" href="Styles/book.css" />
@@ -13,11 +14,18 @@
   <body>
     <article>
       <a class="discreet" href="ouverture.html">
+        <!--h1>
+          The Shape of Design<br/>
+          <span>Frank Chimero</span>
+        </h1-->
         <h1>
           La forme en création<br/>
           <span>Frank Chimero</span>
         </h1>
         <div class="img-block">
+          <!--img alt="The Shape of Design" class="inblockpic"
+            src="Images/00-cover.gif"
+          /-->
           <img alt="La forme en création" class="inblockpic"
             src="Images/00-cover.gif"
           />
