Translate 'Design' as 'Création' for consistency

--- a/book-fr/ouverture.html
+++ b/book-fr/ouverture.html
@@ -36,7 +36,7 @@
       <ul class="credits">
         <li><span class="label osf">Edition :</span> Mandy Brown</li>
         <li><span class="label osf">Relecture :</span> Allen Tan</li>
-        <li><span class="label osf">Conception :</span> Frank Chimero</li>
+        <li><span class="label osf">Création :</span> Frank Chimero</li>
       </ul>
       <!--p class="dedication">For all those on the road —</p-->
       <p class="dedication">A tous ceux qui sont sur la route —</p>
