--- a/book-en/partI.html
+++ b/book-en/partI.html
@@ -49,7 +49,7 @@
         <li>
           <a href="chapter03.html"
             >◦<span class="tooltip"
-            >3&nbsp;&middot;&nbsp;Limitations&nbsp;and&nbsp;Improvisation</span
+            >3&nbsp;&middot;&nbsp;Improvisation&nbsp;and&nbsp;Limitations</span
           ></a>
         </li>
         <li class="sep">
@@ -127,7 +127,7 @@
           <a href="chapter02.html">Craft and Beauty</a>
         </li>
         <li>
-          <a href="chapter03.html">Limitations and Improvisation</a>
+          <a href="chapter03.html">Improvisation and Limitations</a>
         </li>
         <li>
           <a href="chapter04.html">Form and Magic</a>
