Translate the footer as well

--- a/book-fr/table-des-matieres.html
+++ b/book-fr/table-des-matieres.html
@@ -321,13 +321,21 @@
         >Suite de la lecture à l'avant-propos</a>
     </article>
 
-    <footer>
+    <!--footer>
       Licensed
       <a href="http://creativecommons.org/licenses/by-nc-sa/3.0/"
         >BY-NC-SA Creative Commons.</a><br />
       Thanks to
       <a href="http://shapeofdesignbook.com/kickstarter/"
         >the Kickstarter backers.</a>
+    </footer-->
+    <footer>
+      Partagé sous licence
+      <a href="http://creativecommons.org/licenses/by-nc-sa/3.0/deed.fr"
+        >Creative Commons BY-NC-SA,</a><br/>
+      grâce à la générosité des
+      <a href="http://shapeofdesignbook.com/kickstarter/"
+        >mécènes du projet sur Kickstarter.</a>
     </footer>
   </body>
 </html>
