Translate two more paragraphs in introduction

--- a/book-fr/introduction.html
+++ b/book-fr/introduction.html
@@ -341,40 +341,81 @@
       </p>
 
       <p>
-        <!--Dancing requires music, and we each have our own song.-->
+        <!--Dancing requires music,-->
+        Il faut de la musique pour dancer,
+        <!--and we each have our own song.-->
+        et nous avons tous une chanson différente.
         <!--These songs are the culmination of our individual dispositions.-->
-        <!--It is a product of our lines of inquiry about the work that we do,-->
+        Ces chansons sont le point culminant de nos dispositions individuelles.
+        <!--It is a product of our lines of inquiry-->
+        Elles sont le produit de nos pistes de recherche
+        <!--about the work that we do,-->
+        sur le travail que nous faisons,
         <!--and a demonstration of the lens we use to see the world.-->
+        et une démonstration de l'optique que nous utilisons pour voir le monde.
         <!--The first portion of this book-->
+        La première partie de ce livre
         <!--concerns itself with these inner movements.-->
+        s'intéresse à ces mouvements intérieurs.
         <!--We each carry our own tune,-->
+        Chacun de nous chante sur un air différent,
         <!--and if we listen to ourselves,-->
+        et si nous écoutons ce que nous chantons,
         <!--the song that emerges is composed of-->
+        la chanson que nous produisons se compose
         <!--the questions that we ask while working,-->
+        des questions que nous posons en travaillant,
         <!--the methods we choose to employ in our practice,-->
-        <!--and the bias we show by favoring certain responses over others.-->
+        des méthodes que nous choisissons d'employer dans notre pratique,
+        <!--and the bias we show-->
+        et du biais que nous montrons
+        <!--by favoring certain responses over others.-->
+        en favorisant certaines réponses plutôt que d'autres.
         <!--Each song is the origin of the individual’s creativity;-->
+        Chaque chanson est à l'origine de la créativité de l'individu ;
         <!--it is a personal tune that compels us to make things,-->
-        <!--and feel obligated to do so in a way specific to ourselves.-->
+        c'est un air personnel qui nous pousse à construire des choses,
+        <!--and feel obligated to do so-->
+        et nous fait ressentir la nécessité de le faire
+        <!--in a way specific to ourselves.-->
+        d'une manière qui nous est spécifique.
       </p>
 
       <p>
         <!--The second part of the book looks at the milieu of design:-->
+        La seconde partie de ce livre observe le milieu de la création&nbsp;:
         <!--the cultural context of the work we create,-->
+        le contexte culturel de l'œuvre que nous créons,
         <!--the parties involved in its making,-->
+        les groupes qui interviennent dans sa construction,
         <!--those groups’ relationships to one another,-->
+        les relations qui lient ces groupent les uns aux autres,
         <!--and the expected outcomes of the designer’s efforts.-->
-        <!--Design has a tendency to live between things to connect them,-->
+        et les résultats attendus des efforts du créateurs.
+        <!--Design has a tendency to live-->
+        La création a tendance à s'incruster
+        <!--between things to connect them,-->
+        entre les choses pour les connecter,
         <!--so this is analyzed in more detail to find patterns.-->
+        selon des motifs trouvés par une analyse plus détaillée.
         <!--It looks to weigh the value of fiction,-->
+        Nous étudions ensuite le poids donné à la fiction,
         <!--the mutability of artifacts,-->
+        le potentiel de transformation des artefacts,
         <!--and the multiplicity of responses available in design.-->
+        et la variété des réponses disponibles pour la création.
         <!--The purpose of all of these assessments-->
+        Le but de toutes ces évaluations
         <!--is to look at the space around design-->
+        est de considérer l'espace qui entoure la création
         <!--to identify the moving parts,-->
+        pour identifier les pièces mobiles,
         <!--so one can begin to strategize-->
+        pour préparer une stratégie
         <!--how to make this movement sway together-->
+        afin d'unifier ce mouvement en un balancement
         <!--and respond accordingly as things change.-->
+        qui réagit d'un commun accord lorsque les choses changent.
       </p>
 
       <p>
