Enhance wording: 'de ceux' -> 'chez ceux'

--- a/book-fr/ouverture.html
+++ b/book-fr/ouverture.html
@@ -76,7 +76,7 @@
         <!--<em>The Shape of Design</em> was born of a spirit of generosity-->
         <em>La forme en création</em> est né d'un esprit de générosité
         <!--in those who backed the book on Kickstarter.-->
-        de ceux qui ont soutenu ce livre sur Kickstarter.
+        chez ceux qui ont soutenu ce livre sur Kickstarter.
         <!--It should continue that way.-->
         Il faut poursuivre ce mouvement.
         <!--Share and remix the text,-->
