--- a/book-fr/avant-propos.html
+++ b/book-fr/avant-propos.html
@@ -417,35 +417,35 @@
         <!--
         Done well,
         -->
-        Pour bien faire,
+        Un travail bien fait,
         <!--
         and one gets there
         -->
-        et il faut pour y parvenir emprunter
+        auquel on arrive par
         <!--
         “the long, hard, stupid way,”
         -->
-        «&nbsp;durement et bêtement le chemin le plus long&nbsp;»,
+        «&nbsp;le chemin long, bête et méchant&nbsp;»,
         <!--
         as Frank frames it in the pages to come,
         -->
-        selon l'argument que Frank construit dans les pages qui suivent,
+        comme Frank le dit dans les pages qui viennent,
         <!--
         nodding to the gap between efficiency
         -->
-        qui affirme l'écart entre la recherche d'efficacité
+        marquant ainsi l'écart entre l'efficacité
         <!--
         and the extra effort that compels us
         -->
-        et l'effort supplémentaire requis
+        et cet effort supplémentaire qui nous pousse
         <!--
         to make things with pride and compassion.
         -->
-        pour faire les choses avec fierté et compassion,
+        à faire les choses avec fierté et compassion.
         <!--
         Our process will vary,
         -->
-        les méthodes diffèrent,
+        Les méthodes diffèrent,
         <!--
         but steeling ourselves to persist is
         what Frank gives us the tools to do.
