Better translation: 'expanded' -> 'développement'

--- a/book-fr/avant-propos.html
+++ b/book-fr/avant-propos.html
@@ -521,7 +521,7 @@
         <!--
         As trails expanded, telephone poles
         -->
-        Avec l'expansion des pistes, les poteaux téléphoniques
+        Avec le développement des pistes, les poteaux téléphoniques
         <!--
         became painted from the ground up,
         -->
